# bpm

./: .gitignore  README.md  pyproject.toml
bpm/: __main__.py  cli.py  config.py  logger.py
examples/: bpm.toml.no  bpm.yml
examples/dir1/: demo.zsh
examples/dir2/: rar.zsh
